Add companies information
